新增日志支持infranode

--- a/docs/en/install_log.mdx
+++ b/docs/en/install_log.mdx
@@ -3,7 +3,7 @@ weight: 12
 sourceSHA: 43c205dddc9e388e85534a59523781e91fd162be11d7944847ee072df7a84cfa
 ---
 
-# Install
+# Installation
 
 The platform's logging system consists of three plugins:Alauda Container Platform Log Essentails ,  Alauda Container Platform Log Collector and Alauda Container Platform Log Storage. This chapter will introduce you to the installation of these plugins.
 
