审计标题修改

--- a/docs/en/functions/audit.mdx
+++ b/docs/en/functions/audit.mdx
@@ -2,7 +2,7 @@
 weight: 20
 ---
 
-# Introduction
+# Audit
 
 The platform's auditing function provides time-ordered operation records related to users and system security. This helps you analyze specific issues and quickly resolve problems that occur in clusters, custom applications, and other areas.
 
