Fix log archive automount token #AIT-66950

--- a/docs/en/how_to/log_archive.mdx
+++ b/docs/en/how_to/log_archive.mdx
@@ -49,18 +49,18 @@ Based on the above scenarios, the platform offers a log archiving solution, allo
          kubernetes: false # Kubernetes logs
          platform: false # Product logs
        output:
-         type: local                              
-         path: /cpaas/data/logarchive           
+         type: local
+         path: /cpaas/data/logarchive
          layout: TimePrefixed
          # Size of a single archived file; unit is MB. If it exceeds this value, logs will be automatically compressed and archived based on the compression field's configuration.
-         max_size: 200         
+         max_size: 200
          compression: zlib    # Optional: none (no compression) / zlib / gzip
          file_type: txt   # Optional: txt csv json
    kind: ConfigMap
    metadata:
      name: log-exporter-config
      namespace: cpaas-system
-    
+
    ---
    apiVersion: apps/v1
    kind: Deployment
@@ -91,6 +91,7 @@ Based on the above scenarios, the platform offers a log archiving solution, allo
            version: v1
          namespace: cpaas-system
        spec:
+         automountServiceAccountToken: true
          affinity:
            podAffinity: {}
            podAntiAffinity:
@@ -184,7 +185,7 @@ Based on the above scenarios, the platform offers a log archiving solution, allo
                - mountPath: /etc/log-export
                  name: config
                  readOnly: true
-               - mountPath: /cpaas/data/logarchive 
+               - mountPath: /cpaas/data/logarchive
                  name: data
          dnsPolicy: ClusterFirst
          nodeSelector:
@@ -278,7 +279,7 @@ Based on the above scenarios, the platform offers a log archiving solution, allo
    metadata:
      name: log-export-s3-secret
      namespace: cpaas-system
-     
+
    ---
    apiVersion: v1
    data:
@@ -289,27 +290,27 @@ Based on the above scenarios, the platform offers a log archiving solution, allo
          kubernetes: false # Kubernetes logs
          platform: false # Product logs
        output:
-         type: s3                             
-         path: /cpaas/data/logarchive             
-         
+         type: s3
+         path: /cpaas/data/logarchive
+
          s3:
            s3forcepathstyle: true
            bucket_name: baucket_name_s3           # Fill in the prepared bucket name
            endpoint: http://192.168.179.86:9000   # Fill in the prepared S3 storage service address
            region: "dummy"                        # Region information
-           access_secret: log-export-s3-secret    
+           access_secret: log-export-s3-secret
            insecure: true
-                               
+
          layout: TimePrefixed
          # Size of a single archived file; unit is MB. If it exceeds this value, logs will be automatically compressed and archived based on the compression field's configuration.
-         max_size: 200                            
+         max_size: 200
          compression: zlib                        # Optional: none (no compression) / zlib / gzip
          file_type: txt                           # Optional: txt, csv, json
    kind: ConfigMap
    metadata:
      name: log-exporter-config
      namespace: cpaas-system
-    
+
    ---
    apiVersion: apps/v1
    kind: Deployment
@@ -382,7 +383,7 @@ Based on the above scenarios, the platform offers a log archiving solution, allo
                - /razor
                - consumer
                - --v=1
-               - --kafka-group-log=log-s3   
+               - --kafka-group-log=log-s3
                - --kafka-auth-enabled=true
                - --kafka-tls-enabled=true
                - --kafka-endpoint=192.168.179.86:9092  # Fill in the Kafka service address based on actual environment
