--- a/docs/en/upgrade.mdx
+++ b/docs/en/upgrade.mdx
@@ -14,7 +14,7 @@ This document provides the upgrade path principles and supported version compati
 
 The table below lists supported versions of the Alauda Container Platform Logging Service:
 
-|Cost Management Version|Supported Alauda Container Platform Version|
+|Logging Service Version|Supported Alauda Container Platform Version|
 |---|---|
 |4.2.x|4.2.x|
 
