--- a/docs/en/releasenote.mdx
+++ b/docs/en/releasenote.mdx
@@ -4,6 +4,18 @@ weight: 11
 
 # Release Notes
 
+## 4.2.2
+
+Fix security vulnerabilities and security issues
+
+### Component Version Matrix
+|Component|Version|
+|---|---|
+|Alauda Container Platform Log Essentials|4.2.10|
+|Alauda Container Platform Log Storage for ClickHouse|4.2.9|
+|Alauda Container Platform Log Storage for Elasticsearch|4.2.7|
+|Alauda Container Platform Log Collector|4.2.6|
+
 ## 4.2.1
 
 Fix security vulnerabilities and security issues
